--- a/Admin.css
+++ b/Admin.css
@@ -10,41 +10,112 @@
 }
 .header{
     display: grid;
-    grid-template-columns: 2fr 1fr 1fr ;
-    grid-template-rows: 80px 80px;
+    grid-template-columns:  1fr 1fr ;
+    grid-template-rows: 80px 100px;
     align-items: center;
     padding: 10px;
 }
 input{
     margin-left: 10px;
-    width: 450px;
+    width: 400px;
     height: 25px;
     background-color: rgb(207, 207, 211);
     border-radius: 15px;
     border: 1px solid white;
+    align-self: self-end;
 }
 .searches{
     display: grid;
-    align-self: center;
-    justify-content: space-around;
-    gap: 10px;
+    grid-template-columns: auto 1fr;
+    align-items: center;
+    column-gap: 5px;
+    padding-left: 10px;
 }
 .searches input{
     display: grid;
-    align-self: center;
     justify-self: center;
+
 }
-.searches .mdi{
+.searches .mdi span{
     display: grid;
     align-self: center;
     font-size: 25px;
     gap: 10px;
     color: red;
-    
+} 
+.logo{
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    grid-template-rows: repeat(3,1fr);
+}
+.avatar{
+    display: grid;
+    grid-row: 2/3;
+    grid-column: 1/2;
+    padding-left: 10px;
+    width: 80px;
+    height: 80px;
+    border-radius: 80px;
+}
+.user-profile {
+    display: grid;
+    grid-row: 2/3;
+    column-gap: 10px;
+    align-items: center;
+}
+.username{
+    display: grid;
+    justify-self: start;
+    align-items: center;
+    grid-column: 2/3;
+    grid-row: 2/3;
+    font-size: 25px;
+    font-weight: bold;
+}
+  
+.hi{
+    display: grid;
+    grid-row:1/2;
+    grid-column: 2/3;
+    font-size: 15px;
+}
+.small-logo{
+    display: grid;
+    grid-template-columns: 100px 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+}
+.side-avatar{
+    display: grid;
+    grid-row: 1/-1;
+    grid-column: 2;
+    justify-content: center;
+    width: 80px;
+    height: 80px;
+    border-radius: 80px;
+}
+.small-logo p{
+    display: grid;
+    justify-self: center;
+    grid-row:2/3;
+    font-size: 20px;
+    font-weight: bold;
+}
+
+.small-logo .mdi{
+    display:grid;
+    justify-self: center;
+    align-self: center;
+    grid-row: 1/-1;
 } 
 .menu{
     display: grid;
-    grid-column: 2/3;
+    grid-template-columns: repeat(3,1fr);
+    grid-template-rows: 1fr;
+    align-self: end;
+}
+.menu li{
+    display: grid;
+    grid-row: 1/-1;
 }
 .header button{
     display: grid;
@@ -55,7 +126,7 @@ button{
     color: white;
     width: 100px;
     height: 35px;
-    border-radius: 10px;
+    border-radius: 25px; 
     font-family: Arial, Helvetica, sans-serif;
     font-size: 15px;
     display: grid;
@@ -68,7 +139,7 @@ button{
    grid-template-rows: 100px 250px 1fr;
    grid-row: 1/3;
    align-items: center;
-   padding-left: 30px; 
+   justify-content: center; 
    color:white;
    font-weight: 800;
    font-size: 20px;
