--- a/Admin.css
+++ b/Admin.css
@@ -1,21 +1,25 @@
-*{
-    margin:0;
+* {
+    margin: 0;
     padding: 0;
-}
-.container{
+  }
+  
+  .container {
     display: grid;
     grid-template-columns: 1fr 4fr;
-    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
     gap: 4px;
-}
-.header{
+    border-color: rgb(189, 191, 192);
+  }
+  
+  .header {
     display: grid;
-    grid-template-columns:  1fr 1fr ;
+    grid-template-columns: 1fr 1fr;
     grid-template-rows: 80px 100px;
     align-items: center;
     padding: 10px;
-}
-input{
+  }
+  
+  input {
     margin-left: 10px;
     width: 400px;
     height: 25px;
@@ -23,47 +27,53 @@ input{
     border-radius: 15px;
     border: 1px solid white;
     align-self: self-end;
-}
-.searches{
+  }
+  
+  .searches {
     display: grid;
     grid-template-columns: auto 1fr;
     align-items: center;
     column-gap: 5px;
     padding-left: 10px;
-}
-.searches input{
+  }
+  
+  .searches input {
     display: grid;
     justify-self: center;
-
-}
-.searches .mdi span{
+  }
+  
+  .searches .mdi span {
     display: grid;
     align-self: center;
     font-size: 25px;
     gap: 10px;
     color: red;
-} 
-.logo{
+  }
+  
+  .logo {
     display: grid;
-    grid-template-columns: repeat(3,1fr);
-    grid-template-rows: repeat(3,1fr);
-}
-.avatar{
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: 1fr 1fr 1fr  ;
+  }
+  
+  .avatar {
     display: grid;
     grid-row: 2/3;
     grid-column: 1/2;
     padding-left: 10px;
-    width: 80px;
-    height: 80px;
+    width: 100px;
+    height: 100px;
     border-radius: 80px;
-}
-.user-profile {
+  }
+  
+  .user-profile {
     display: grid;
     grid-row: 2/3;
     column-gap: 10px;
     align-items: center;
-}
-.username{
+  }
+  
+  .username {
     display: grid;
     justify-self: start;
     align-items: center;
@@ -71,20 +81,22 @@ input{
     grid-row: 2/3;
     font-size: 25px;
     font-weight: bold;
-}
+  }
   
-.hi{
+  .hi {
     display: grid;
-    grid-row:1/2;
+    grid-row: 1/2;
     grid-column: 2/3;
     font-size: 15px;
-}
-.small-logo{
+  }
+  
+  .small-logo {
     display: grid;
     grid-template-columns: 100px 1fr 1fr;
     grid-template-rows: 1fr 1fr;
-}
-.side-avatar{
+  }
+  
+  .side-avatar {
     display: grid;
     grid-row: 1/-1;
     grid-column: 2;
@@ -92,92 +104,107 @@ input{
     width: 80px;
     height: 80px;
     border-radius: 80px;
-}
-.small-logo p{
+  }
+  
+  .small-logo p {
     display: grid;
     justify-self: center;
-    grid-row:2/3;
+    grid-row: 2/3;
     font-size: 20px;
     font-weight: bold;
-}
-
-.small-logo .mdi{
-    display:grid;
+  }
+  
+  .small-logo .mdi {
+    display: grid;
     justify-self: center;
     align-self: center;
     grid-row: 1/-1;
-} 
-.menu{
+  }
+  
+  .menu {
     display: grid;
-    grid-template-columns: repeat(3,1fr);
+    grid-template-columns: repeat(3, 1fr);
     grid-template-rows: 1fr;
     align-self: end;
-}
-.menu li{
+  }
+  
+  .menu li {
     display: grid;
     grid-row: 1/-1;
-}
-.header button{
+  }
+  
+  .header button {
     display: grid;
     justify-content: space-around;
-}
-button{
+  }
+  
+  button {
     background-color: rgb(77, 173, 252);
     color: white;
     width: 100px;
     height: 35px;
-    border-radius: 25px; 
+    border-radius: 25px;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 15px;
     display: grid;
     align-items: center;
     margin: 10px;
-}
-.sidebar{
-   background-color: rgb(57, 164, 252);
-   display: grid;
-   grid-template-rows: 100px 250px 1fr;
-   grid-row: 1/3;
-   align-items: center;
-   justify-content: center; 
-   color:white;
-   font-weight: 800;
-   font-size: 20px;
-}
-.sidebar > .top{
-  display: grid;
-}
-.dash{
+  }
+  
+  .sidebar {
+    background-color: rgb(57, 164, 252);
+    display: grid;
+    grid-template-rows: 100px 250px 1fr;
+    grid-row: 1/5;
+    align-items: center;
+    justify-content: center;
+    color: white;
+    font-weight: 800;
+    font-size: 20px;
+  }
+  
+  .sidebar > .top {
+    display: grid;
+  }
+  
+  .dash {
     display: grid;
     align-self: center;
-}
-.top{
+  }
+  
+  .top {
     display: grid;
-    gap : 20px;
-}
-.below{
+    gap: 20px;
+  }
+  
+  .below {
     display: grid;
     align-self: start;
     padding-top: 40px;
     gap: 15px;
-}
-.nav{
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr;
-}
-.nav ul, li{
-    list-style: none;
-    display: grid;
-}
-.nav li{
-    display: grid;
-    grid-row:1;
-}
+  }
+  
 
-
-.article{
+  .tn {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    justify-content: start;
+    align-self: center;
+    padding-top: 50px;
+  }
+  
+  .article {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
     grid-column: 2/3;
-}
+  }
+  .article .card{
+    height: 150px;
+    border-left: 5px solid yellow ;
+    gap: 10px;
+  }
+  .footer{
+    display: grid;
+    grid-row:4/5;
+    background-color: black;
+  }
+  
