--- a/Admin.css
+++ b/Admin.css
@@ -5,60 +5,50 @@
   
   .container {
     display: grid;
-    grid-template-columns: 1fr 4fr;
-    grid-template-rows: 1fr 1fr;
-    gap: 4px;
-    border-color: rgb(189, 191, 192);
+    grid-template-columns: 250px 1fr;
+    grid-template-rows: auto 1fr;
   }
   
   .header {
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 80px 100px;
-    align-items: center;
-    padding: 10px;
+    grid-template-columns: 2fr 1fr;
+    grid-template-rows: auto auto;
+    grid-column: 2/3;
+    gap: 10px;
+    padding: 20px;
+    background-color: white;
   }
-  
-  input {
-    margin-left: 10px;
-    width: 400px;
-    height: 25px;
-    background-color: rgb(207, 207, 211);
-    border-radius: 15px;
-    border: 1px solid white;
-    align-self: self-end;
-  }
-  
   .searches {
     display: grid;
     grid-template-columns: auto 1fr;
     align-items: center;
-    column-gap: 5px;
-    padding-left: 10px;
+    column-gap: 10px;
   }
   
   .searches input {
-    display: grid;
-    justify-self: center;
+    width: 100%;
+    height: 30px;
+    background-color: rgb(207, 207, 211);
+    border-radius: 15px;
+    border: 1px solid white;
+    padding-top: 5px;
+    padding-right:15px;
   }
   
-  .searches .mdi span {
-    display: grid;
-    align-self: center;
+  .searches .mdi{
     font-size: 25px;
-    gap: 10px;
-    color: red;
   }
   
   .logo {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: 1fr 1fr 1fr  ;
+    grid-column: 1/2;
+    grid-row: 2/3;
+    align-items: center;
+    background-color: white;
   }
   
   .avatar {
-    display: grid;
-    grid-row: 2/3;
+    grid-row: 1/3;
     grid-column: 1/2;
     padding-left: 10px;
     width: 100px;
@@ -68,57 +58,52 @@
   
   .user-profile {
     display: grid;
-    grid-row: 2/3;
+    grid-template-columns: auto 1fr;
+    grid-template-rows: auto auto;
     column-gap: 10px;
     align-items: center;
   }
   
   .username {
-    display: grid;
-    justify-self: start;
-    align-items: center;
+    grid-row:2/3;
     grid-column: 2/3;
-    grid-row: 2/3;
     font-size: 25px;
     font-weight: bold;
   }
   
   .hi {
-    display: grid;
-    grid-row: 1/2;
-    grid-column: 2/3;
+    grid-row:1/2;
+    grid-column:2/3;
     font-size: 15px;
+    margin-bottom: 2px;
   }
   
   .small-logo {
     display: grid;
-    grid-template-columns: 100px 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
+    grid-template-columns: auto auto auto;
+    grid-column:2/3;
+    grid-row: 1/2;
+    gap:10px;
+    justify-content: end;
+    align-items: center;
   }
   
   .side-avatar {
-    display: grid;
-    grid-row: 1/-1;
-    grid-column: 2;
-    justify-content: center;
+    grid-column: 2/3;
     width: 80px;
     height: 80px;
     border-radius: 80px;
   }
   
   .small-logo p {
-    display: grid;
-    justify-self: center;
-    grid-row: 2/3;
-    font-size: 20px;
+    grid-column: 3/4;
+    font-size: 15px;
     font-weight: bold;
   }
   
   .small-logo .mdi {
-    display: grid;
-    justify-self: center;
-    align-self: center;
-    grid-row: 1/-1;
+    grid-column: 1/2;
+    font-size: 25px;
   }
   
   .menu {
@@ -154,13 +139,11 @@
   .sidebar {
     background-color: rgb(57, 164, 252);
     display: grid;
-    grid-template-rows: 100px 250px 1fr;
-    grid-row: 1/5;
-    align-items: center;
-    justify-content: center;
+    grid-template-rows: auto auto 1fr;
+    grid-row: 1/3;
+    padding: 20px;
     color: white;
-    font-weight: 800;
-    font-size: 20px;
+    gap: 20px;
   }
   
   .sidebar > .top {
@@ -183,28 +166,47 @@
     padding-top: 40px;
     gap: 15px;
   }
-  
+  .main{
+    display: grid;
+    grid-column: 2/3;
+    gap: 20px;
+    background-color: rgb(207, 207, 211);
+    padding: 20px;
+  }
 
   .tn {
     display: grid;
     justify-content: start;
-    align-self: center;
-    padding-top: 50px;
+    align-self: end;
+    padding-bottom: 30px;
+    padding-left: 30px;
   }
   
   .article {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
-    grid-column: 2/3;
+    grid-template-columns: 350px 350px;
+    gap: 20px;    
   }
   .article .card{
-    height: 150px;
+    display: grid;
+    border-radius: 10px ;
     border-left: 5px solid yellow ;
+    background-color: white;
     gap: 10px;
   }
-  .footer{
-    display: grid;
-    grid-row:4/5;
-    background-color: black;
+  .article .title{
+    font-weight: bold;
+    padding-bottom: 10px;
   }
-  
+ 
+  .article .sign{
+    justify-self: end;
+  }
+ .trending{
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    gap: 10px;
+    border-radius: 10px;
+    background-color: white;
+    padding: 20px;
+ }
