--- a/Admin.css
+++ b/Admin.css
@@ -168,35 +168,36 @@
   }
   .main{
     display: grid;
+    grid-template-columns: 1fr;
     grid-column: 2/3;
     gap: 20px;
     background-color: rgb(207, 207, 211);
     padding: 20px;
   }
-
-  .tn {
+  .content{
     display: grid;
-    justify-content: start;
-    align-self: end;
-    padding-bottom: 30px;
-    padding-left: 30px;
+    grid-template-columns: 2fr 1fr;
+    gap:20px;
   }
-  
   .article {
     display: grid;
     grid-template-columns: 350px 350px;
+    grid-row: 1/-1;
     gap: 20px;    
   }
   .article .card{
     display: grid;
     border-radius: 10px ;
-    border-left: 5px solid yellow ;
+    padding-top: 25px;
+    border-left: 5px solid orange ;
     background-color: white;
-    gap: 10px;
+  }
+  .card p{
+    padding-left: 10px;
   }
   .article .title{
     font-weight: bold;
-    padding-bottom: 10px;
+    font-size: 20px;
   }
  
   .article .sign{
@@ -204,9 +205,68 @@
   }
  .trending{
     display: grid;
-    grid-template-columns: 1fr 2fr;
-    gap: 10px;
+    grid-template-columns: 1fr;
+    gap: 15px;
     border-radius: 10px;
     background-color: white;
     padding: 20px;
  }
+ .people{
+    display: grid;
+    grid-template-columns: auto 1fr;
+    align-items: center;
+    gap: 10px;
+    padding-top: 5px;
+ }
+ .side{
+    display: grid;
+    grid-template-rows: repeat(3,1fr);
+    border-radius: 10px;
+    background-color: white;
+    gap: 15px;
+    padding: 20px;
+ }
+ .side div{
+    padding: 20px;
+ }
+ .aside {
+    display: grid;
+    grid-template-rows: auto auto;
+    gap: 20px;
+  }
+  .tn {
+    display: grid;
+    justify-content: start;
+    align-self: end;
+    padding-bottom: 30px;
+  }
+  .tr{
+    font-size: 20px;
+    font-weight: bold;
+    margin-bottom: 10px;
+  }
+  .text{
+    display: grid;
+    grid-template-columns: 1fr 350px;
+    grid-template-rows: 1fr;
+  }
+  .An{
+    display:grid;
+    align-self: start;
+    justify-self: start;
+    font-weight: bold;
+    padding-left: 30px;
+
+  }
+  .An h2{
+    display:grid;
+    align-self: start;
+    justify-content: center;
+    font-size: 30px;
+    margin-right: 20px;
+  }
+  .ans{
+    display: grid;
+    grid-template-rows: auto 1fr;
+    gap: 10px;
+  }
