--- a/Admin.css
+++ b/Admin.css
@@ -208,19 +208,26 @@
   }
  .trending{
     display: grid;
-    grid-template-columns: 1fr;
+    grid-template-rows: repeat(4,1fr);
     gap: 15px;
     border-radius: 10px;
     background-color: white;
-    padding: 20px;
+    padding: 20px; 
  }
- .people{
+ 
+ .people {
     display: grid;
-    grid-template-columns: auto 1fr;
+    grid-template-columns: 50px 1fr;
     align-items: center;
     gap: 10px;
-    padding-top: 5px;
  }
+ 
+.image {
+    width: 40px;
+    height: 40px;
+    border-radius: 20px;
+ }  
+ 
  .side{
     display: grid;
     grid-template-rows: repeat(3,1fr);
@@ -228,8 +235,11 @@
     background-color: white;
     gap: 15px;
     padding: 20px;
- }
+ } 
  .side div{
+    padding:20px;
+ }
+ .line{
     padding: 20px;
     border-bottom: 1px solid grey;
  }
