--- a/Admin.css
+++ b/Admin.css
@@ -5,6 +5,12 @@
     --point: pointer;
     --side: rgb(57, 164, 252);
     --gray: rgb(207, 207, 211);
+    --size: 10px;
+}
+@property --size{
+    syntax: '<length>';
+    inherits: false;
+    initial-value: 10px;
 }
 @property --gray{
     syntax: '<color>';
@@ -41,7 +47,7 @@ body{
     grid-template-columns: 2fr 1fr;
     grid-template-rows: auto auto;
     grid-column: 2/3;
-    gap: 10px;
+    gap: var(--size);
     padding: 20px;
     background-color: var(--back);
   }
@@ -49,7 +55,7 @@ body{
     display: var(--layout-type);
     grid-template-columns: auto 1fr;
     align-items: center;
-    column-gap: 10px;
+    column-gap: var(--size);
   }
   
   .searches input {
@@ -65,7 +71,7 @@ body{
   }
   input:active{
     transform: scale(1.02);
-    padding-left: 10px;
+    padding-left: var(--size);
   }
   
   .searches .mdi{
@@ -83,7 +89,7 @@ body{
   .avatar {
     grid-row: 1/3;
     grid-column: 1/2;
-    padding-left: 10px;
+    padding-left: var(--size);
     width: 100px;
     height: 100px;
     border-radius: 80px;
@@ -94,7 +100,7 @@ body{
     display: var(--layout-type);
     grid-template-columns: auto 1fr;
     grid-template-rows: auto auto;
-    column-gap: 10px;
+    column-gap: var(--size);
     align-items: center;
   }
   
@@ -118,7 +124,7 @@ body{
     grid-template-columns: auto auto auto;
     grid-column:2/3;
     grid-row: 1/2;
-    gap:10px;
+    gap: var(--size);
     justify-content: end;
     align-items: center;
   }
@@ -172,7 +178,7 @@ body{
     font-size: 15px;
     display: var(--layout-type);
     align-items: center;
-    margin: 10px;
+    margin: var(--size);
   }
   button:hover{
     background: linear-gradient(var(--back), steelblue );
@@ -203,7 +209,7 @@ body{
     display: var(--layout-type);
     align-self: center;
     font-size: 25px;
-    margin-top: 10px;
+    margin-top: var(--size);
     margin-bottom: 20px;
   }
   
@@ -247,7 +253,7 @@ body{
     background-color: var(--back);
   }
   .card p{
-    padding-left: 10px;
+    padding-left: var(--size);
   }
   .article .title{
     font-weight: bold;
@@ -267,7 +273,7 @@ body{
     display: var(--layout-type);
     grid-template-rows: repeat(4,1fr);
     gap: 15px;
-    border-radius: 10px;
+    border-radius: var(--size);
     background-color: var(--back);
     padding: 20px; 
  }
@@ -276,7 +282,7 @@ body{
     display: var(--layout-type);
     grid-template-columns: 50px 1fr;
     align-items: center;
-    gap: 10px;
+    gap: var(--size);
     cursor: var(--point);
  }
  
@@ -289,7 +295,7 @@ body{
  .side{
     display: var(--layout-type);
     grid-template-rows: repeat(3,1fr);
-    border-radius: 10px;
+    border-radius: var(--size);
     background-color: var(--back);
     gap: 15px;
     padding: 20px;
@@ -315,7 +321,7 @@ body{
   .tr{
     font-size: 20px;
     font-weight: bold;
-    margin-bottom: 10px;
+    margin-bottom: var(--size);
   }
   .text{
     display: var(--layout-type);
@@ -340,5 +346,5 @@ body{
   .ans{
     display: var(--layout-type);
     grid-template-rows: auto 1fr;
-    gap: 10px;
+    gap: var(--size);
   }
